--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
   <div id="navbar" class="topnav">
   <p class="name-logo"><a class="logo-link" href="index.html" style="font-family: minion-pro; font-size: 24px; margin-top: 0px; padding-top: 0px">Edward Tian <span class="short-title" style="font-family: sofia-pro; font-weight: 600"> | Portfolio </span></a></p>
   <div class="topnav-right">
-    <a href="digital.html">Digital Resume</a>
-    <a href="clips.html">Clips</a>
-    <a href="code.html">Code</a>  
+    <p class= "name-logo">
+    <a href="code.html" style="font-family: minion-pro; font-size: 22px; margin-top: 0px; padding-top: 0px">Code</a>  
+    <a href="clips.html" class = "logo-link" style="font-family: minion-pro; font-size: 22px; margin-top: 0px; padding-top: 0px; margin-right:1em">Clips</a>
+    <!-- <a href="digital.html" style="font-family: minion-pro; font-size: 20px; margin-top: 0px; padding-top: 0px"> Digital Resume</a> -->
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="expandMenu()">&#9776;</a>
+    </p>
   </div>
   </div>
 
@@ -36,13 +38,17 @@
 
 
   <div class="large-caption" style="opacity: 0.85">
-    <h1 style="color: rgb(32, 56, 85);"> Hello, <br> I'm Edward</h1>
+    <!-- <img src="me.png" height= "200" width="200" style="float:left;"/>     -->
+    <img src="me.png" class="circle" style = float:left >
+    <div style = "padding-left: 20px">
+    <h1 style="color: rgb(32, 56, 85)"> Hello, <br> I'm Edward</h1>
+    </div>
   </div>
 
 <div style="height: 20vh" data-aos="fade"></div>
 <div style="height: 50vh" data-aos="fade" data-aos-id="trigger-3"></div>
 
-  <!-- background animation -->
+<!-- background animation -->
 
 <div class="street" data-aos="fade-in" data-aos-duration="1000" style="z-index:0;">
   <img id = "background-street" data-aos="fade" data-aos-id = "trigger-3" data-aos-anchor="#trigger-3" src="wewin.png"  
@@ -57,14 +63,22 @@
   <p> Writing and coding fueled by caffiene </p>
 </div> -->
 
-<div style="height: 50vh" data-aos="fade" data-aos-id="color"></div>
+<div style="height: 40vh" data-aos="fade" data-aos-id="color"></div>
 <div class="large-caption" data-aos="fade-out" data-aos-duration="1200" style="opacity: 0.85">
-  <h3> Frontend Engineer, Data Journalist, and Graphic Designer</h3> 
+  <h3>I'm a Software Engineer and Data Journalist</h3> 
 </div>
 
 <div style="height: 60vh"></div>
 <div class="large-caption" data-aos="fade-out" data-aos-duration="1200" style="opacity: 0.85">
-  <h3> Graphic Designer </h3> 
+  <h3> But my real passion is using words and code to tell stories. </h3> 
+</div>
+
+<div style="height: 60vh"></div>
+<div class="large-caption" data-aos="fade-out" data-aos-duration="1200" style="opacity: 0.85">
+  <h4> For example, this background is a visualization I made on disinformation networks in the Phillipines. 
+      It was built from scraping ~10,000 Tweets in an investigation 
+      on Duterte backed online attacks against opposition politicians and journalists.
+     </h4> 
 </div>
 
 <div data-aos="fade-out" data-aos-id="end-graphic" style="height: 20vh"></div>
@@ -105,7 +119,8 @@
 
 
     <div class="intro">
-      <p> Want to learn more about me? Check out my <a href="digital.html">Digital Resume</a>.</p>
+      <!-- <p> Want to learn more about me? Check out my <a href="code.html">Linkedin</a> or <a href="code.html">Twitter</a>.</p> -->
+      <p> Want to connect with me? Start a conversation on <a href="https://www.linkedin.com/in/ed-tian/" target = "_blank">Linkedin</a> or <a href="https://twitter.com/edward_the6" target = "_blank">Twitter</a>.</p>
       <p> Continue browsing the portfolio <a href="code.html">Code</a> and <a href="clips.html">Clips</a>.</p>
     </div>
     
