--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       AOS.init({
         duration: 800,
       });
-    </script>
+  </script>
 
   <!-- Navbar -->
   <div id="navbar" class="topnav">
@@ -36,12 +36,12 @@
 
   <div style="height: 20vh"></div>
 
-
   <div class="large-caption" style="opacity: 0.85">
     <!-- <img src="me.png" height= "200" width="200" style="float:left;"/>     -->
-    <img src="me.png" class="circle" style = float:left >
+    <img src="images/edward.JPG" class="circle" style = float:left >
     <div style = "padding-left: 20px">
-    <h1 style="color: rgb(32, 56, 85)"> Hello, <br> I'm Edward</h1>
+    <h1 style="color: rgb(5, 7, 19)"> Hello, <br> I'm Edward</h1>
+    <!-- rgb(32, 56, 85) -->
     </div>
   </div>
 
@@ -51,7 +51,7 @@
 <!-- background animation -->
 
 <div class="street" data-aos="fade-in" data-aos-duration="1000" style="z-index:0;">
-  <img id = "background-street" data-aos="fade" data-aos-id = "trigger-3" data-aos-anchor="#trigger-3" src="wewin.png"  
+  <img id = "background-street" data-aos="fade" data-aos-id = "trigger-3" data-aos-anchor="#trigger-3" src="images/wewin.png"  
   style="margin: 0px; width: 100vw;">
   <!-- <svg id="background-street" data-aos="fade" data-aos-duration="1000" data-aos-id="trigger-3" data-aos-anchor="#trigger-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1167 411.3"><defs><style>.a,.b{fill:#fff;}.a,.c{stroke:#282828;stroke-miterlimit:10;}.c{fill:none;}</style></defs><polygon id="terrace" class="a" points="75.23 360.38 77.43 374.21 80.4 373.74 85.11 403.37 100.91 400.85 101.7 405.79 108.57 410.77 120.42 408.89 129.55 396.3 126.88 379.51 147.62 376.21 142.75 345.59 147.69 344.81 142.81 314.19 110.22 319.38 112.11 331.23 96.31 333.74 94.42 321.89 71.71 325.5 77.21 360.07 75.23 360.38"/><polygon id="tower" class="a" points="133.5 192.5 133.5 228.5 157.5 228.5 157.5 246.5 203.5 246.5 203.5 222.5 214.5 222.5 214.5 202.5 202.5 202.5 202.5 181.5 177.5 181.5 177.5 188.5 162.5 188.5 162.5 192.5 133.5 192.5"/><path id="quad" class="a" d="M524.69,339.35v36h4v10h10s3,5,19,5,19-4,19-4h13v-11h3v-9h13v-19h-15v-8Z" transform="translate(-99.19 -139.85)"/><polygon id="ivy" class="a" points="539.5 217.5 539.5 279.5 569.5 279.5 569.5 254.5 604.5 254.5 604.5 279.5 609.5 279.5 609.5 301.5 628.5 301.5 628.5 202.5 604.5 202.5 604.5 207.5 582.5 207.5 582.5 202.5 558.5 202.5 558.5 217.5 539.5 217.5"/><path id="cottage" class="b" d="M852.69,364.35h-4v-20h-20v4h-40v-4h-19v18h-7l-7,3v14l7,5h7v40h19v-5h40v5h20v-40h3l4.5-4.5v-12.5Zm-24,43h-40v-29h40Z" transform="translate(-99.19 -139.85)"/><path class="c" d="M852.69,364.35h-4v-20h-20v4h-40v-4h-19v18h-7l-7,3v14l7,5h7v40h19v-5h40v5h20v-40h3l4.5-4.5v-12.5Zm-24,43h-40v-29h40Z" transform="translate(-99.19 -139.85)"/><polygon id="cap" class="a" points="851.5 290.5 789.5 290.5 789.5 235.5 814.5 235.5 814.5 254.5 842.5 254.5 842.5 248.5 858.5 248.5 858.5 254.5 862.5 254.5 862.5 237.5 884.5 237.5 884.5 257.5 890.5 257.5 890.5 285.5 882.5 285.5 882.5 336.5 851.5 336.5 851.5 290.5"/><polygon id="cloister" class="a" points="958.5 195.5 958.5 234.5 1000.5 234.5 1000.5 254.5 1023.5 254.5 1023.5 195.5 1015.5 195.5 1015.5 186.5 991.5 186.5 991.5 195.5 958.5 195.5"/><polygon id="charter" class="a" points="1082.5 204.5 1082.5 271.5 1117.5 271.5 1117.5 241.5 1144.5 241.5 1144.5 248.5 1166.5 248.5 1166.5 204.5 1144.5 204.5 1144.5 211.5 1105.5 211.5 1105.5 204.5 1082.5 204.5"/><polygon id="ti" class="a" points="617.5 18.5 617.5 68.5 628.5 68.5 628.5 87.5 637.5 87.5 637.5 107.5 702.5 107.5 702.5 18.5 617.5 18.5"/><polygon id="colonial" class="a" points="487.5 51.5 487.5 87.5 516.5 87.5 516.5 102.5 546.5 102.5 546.5 87.5 573.5 87.5 573.5 51.5 546.5 51.5 546.5 38.5 516.5 38.5 516.5 51.5 487.5 51.5"/><polygon id="campus" class="a" points="0.5 186.5 25.5 186.5 25.5 183.5 40.5 183.5 40.5 192.5 65.5 192.5 65.5 198.5 84.5 198.5 84.5 229.5 0.5 229.5 0.5 215.5 4.5 215.5 4.5 210.5 0.5 210.5 0.5 186.5"/><polygon id="dial" class="a" points="319.5 17.5 319.5 58.5 416.5 58.5 416.5 0.5 388.5 0.5 388.5 17.5 319.5 17.5"/></svg> -->
 </div>
@@ -108,15 +108,11 @@
     </div>
     </div>
 
-    <div class="center-box" data-aos="fade-up">
-      <iframe title="Fake IDs by International Status" aria-label="chart" id="datawrapper-chart-HLbdK" src="https://datawrapper.dwcdn.net/HLbdK/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="600"></iframe>
-      <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
-      </script>
+    <div class = "center-box" data-aos="fade-in">
       <p>
-      Six percent of respondents indicated they possessed a fake ID. New Jersey <a href="https://law.justia.com/codes/new-jersey/2013/title-2c/section-2c-21-2.1/">classifies</a> possession of a false government document as a “crime of the fourth degree” — the lowest-grade felony — unless the ID is used solely to illegally purchase alcohol, tobacco, or another age-restricted product, a violation that the state dubs a “disorderly persons offense.” As <a href="https://www.who.int/substance_abuse/publications/en/Alcohol%20Policy%20Report.pdf">most countries</a> outside the United States allow 18-year-olds to drink, just three international respondents owned fake IDs.
+      I am a Princeton student exploring the intersections of CS and journalism. Building powerful graphics and site visualizations.
       </p>
     </div>
-
 
     <div class="intro">
       <!-- <p> Want to learn more about me? Check out my <a href="code.html">Linkedin</a> or <a href="code.html">Twitter</a>.</p> -->
