--- a/clips.html
+++ b/clips.html
@@ -12,8 +12,6 @@
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   </head>
 
-<body>
-
 <script src="script.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -26,146 +24,223 @@
         </p>
       </div>
     </div>
+<img src="images/books.png" style="margin: 0px; width: 100vw">
 
-<img src="Lifestyle_BG.png" style="margin: 0px; width: 100vw">
+<body>
+  
+  <!-- Section 1 -->
+  
+  <div class="inner">
+    <br>
+    <h1> // Investigative </h1>
+    <p> <i>Websites and projects that I've worked on throughout the years. 
+      <br> The portfolio combines code from software engineering, data analysis and graphics.
+    </i></p>
+      <section class="tiles">
+        <article class="style2">
+          <span class="image">
+            <img src="images/dance.png" alt="" />
+          </span>
+          <a href="http://pac-schedule.herokuapp.com/" target = "_blank">
+            <h2 style="padding-right:1em">WHO Investigation</h2>
+            <div class="content">
+              <p>Website | Frontend engineering.</p>
+            </div>
+          </a>
+        </article>
+        <article class="style2">
+          <span class="image">
+            <img src="images/representable.png" alt="" />
+          </span>
+          <a href="https://representable.org/" target = "_blank">
+            <h2 style="padding-right:1em">Twitter</h2>
+            <div class="content">
+              <p>Full stack engineering (Django + PostgresSQL).
+                Funded by Schmidt Futures, we're building mapping software to end gerrymandering.
+              </p>
+            </div>
+          </a>
+        </article>
+      </section>
+    </div>
 
-<h1 id="title-mobile""> Clips </h1>
-<h2 id="subtitle-mobile"> Words with Purpose </h2>
-<div class="intro">
-<p>With roots in campus journalism, my determination to deliver dependable and data-driven reporting grew alongside the Covid-19 pandemic. 
-  As the pandemic reached college campuses, I covered a barrage of breaking news, features of students, and obituaries of professors, 
-  keeping both our community and their loved ones’ safe and informed. <br> <br> I have curated below a list of my favorite clips 
-  spanning a range of journalistic styles from breaking news to long-form investigations. </p>
-</div>
+<!-- Section 2 -->
+  
+<div class="inner">
+  <br>
+  <h1> // Features </h1>
+  <p> <i>Websites and projects that I've worked on throughout the years. 
+    <br> The portfolio combines code from software engineering, data analysis and graphics. <br>
+    All projects are custom built including this website. Hope you'll enjoy browsing!
+  </i></p>
+    <section class="tiles">
+      <article class="style2">
+        <span class="image">
+          <img src="images/dance.png" alt="" />
+        </span>
+        <a href="http://pac-schedule.herokuapp.com/" target = "_blank">
+          <h2 style="padding-right:1em">International Students</h2>
+          <div class="content">
+            <p>Website | Frontend engineering.</p>
+          </div>
+        </a>
+      </article>
+      <article class="style2">
+        <span class="image">
+          <img src="images/representable.png" alt="" />
+        </span>
+        <a href="https://representable.org/" target = "_blank">
+          <h2 style="padding-right:1em">William Massey</h2>
+          <div class="content">
+            <p>Full stack engineering (Django + PostgresSQL).
+              Funded by Schmidt Futures, we're building mapping software to end gerrymandering.
+            </p>
+          </div>
+        </a>
+      </article>
+      <article class="style2">
+        <span class="image">
+          <img src="images/launch.png" alt="" />
+        </span>
+        <a href="https://stratos.tl/" target = "_blank">
+          <h2 style="padding-right:1em">Small Business</h2>
+          <div class="content">
+            <p> Data Analysis + Engineering + Leadership. <br> 
+                Toolkit for sourcing college startups.</p>
+          </div>
+        </a>
+      </article>
+    </section>
+  </div>
 
-<div class="center-box" data-aos="fade-up">
-  <iframe title="Sex" aria-label="chart" id="datawrapper-chart-uhecN" src="https://datawrapper.dwcdn.net/uhecN/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="468"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
-  </script>
-  <p>
-Entering Princeton in an age of quarantine and social distancing, 61.5 percent of respondents reported never having had sex. Factors that increased respondents’ likelihood of engaging in sex included identifying as male, hailing from a different country, or identifying as “not very” or “not at all” religious. Respondents who are recruited athletes were approximately twice as likely to have had sex as their non-varsity counterparts. A.B. respondents and LGBTQ+ respondents were slightly more likely to have had sex than their B.S.E. and straight counterparts, respectively. 
-</p>
-</div>
+<!-- Section 3 -->
+  
+<div class="inner">
+  <br>
+  <h1> // News </h1>
+  <p> <i>Websites and projects that I've worked on throughout the years. 
+    <br> The portfolio combines code from software engineering, data analysis and graphics. <br>
+    All projects are custom built including this website. Hope you'll enjoy browsing!
+  </i></p>
+    <section class="tiles">
+      <article class="style2">
+        <span class="image">
+          <img src="images/dance.png" alt="" />
+        </span>
+        <a href="http://pac-schedule.herokuapp.com/" target = "_blank">
+          <h2 style="padding-right:1em">Breaking</h2>
+          <div class="content">
+            <p>Website | Frontend engineering.</p>
+          </div>
+        </a>
+      </article>
+      <article class="style2">
+        <span class="image">
+          <img src="images/representable.png" alt="" />
+        </span>
+        <a href="https://representable.org/" target = "_blank">
+          <h2 style="padding-right:1em">Obituary</h2>
+          <div class="content">
+            <p>Full stack engineering (Django + PostgresSQL).
+              Funded by Schmidt Futures, we're building mapping software to end gerrymandering.
+            </p>
+          </div>
+        </a>
+      </article>
+    </section>
+  </div>
 
-<script>
-function expandMenu() {
-  var x = document.getElementById("navbar");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-</script>
+<!-- Section 4 -->
+  
+<div class="inner">
+  <br>
+  <h1> // Audio </h1>
+  <p> <i>Websites and projects that I've worked on throughout the years. 
+    <br> The portfolio combines code from software engineering, data analysis and graphics. <br>
+    All projects are custom built including this website. Hope you'll enjoy browsing!
+  </i></p>
+    <section class="tiles">
+      <article class="style2">
+        <span class="image">
+          <img src="images/dance.png" alt="" />
+        </span>
+        <a href="http://pac-schedule.herokuapp.com/" target = "_blank">
+          <h2 style="padding-right:1em">Dance</h2>
+          <div class="content">
+            <p>Website | Frontend engineering.</p>
+          </div>
+        </a>
+      </article>
+      <article class="style2">
+        <span class="image">
+          <img src="images/representable.png" alt="" />
+        </span>
+        <a href="https://representable.org/" target = "_blank">
+          <h2 style="padding-right:1em">Representable</h2>
+          <div class="content">
+            <p>Full stack engineering (Django + PostgresSQL).
+              Funded by Schmidt Futures, we're building mapping software to end gerrymandering.
+            </p>
+          </div>
+        </a>
+      </article>
+      <article class="style2">
+        <span class="image">
+          <img src="images/launch.png" alt="" />
+        </span>
+        <a href="https://stratos.tl/" target = "_blank">
+          <h2 style="padding-right:1em">Launch</h2>
+          <div class="content">
+            <p> Data Analysis + Engineering + Leadership. <br> 
+                Toolkit for sourcing college startups.</p>
+          </div>
+        </a>
+      </article>
+    </section>
+  </div>
 
-<div id = "buttons" class="buttons">
-    <a href="#geography">Geography</a>
-      <a href="#identity">Identity</a>
-      <a href="#family">Family</a>
-      <a href="#finances">Finances</a>
-      <a href="#high-school">High School</a>
-</div>
+<!-- Section 5 -->
+  
+<div class="inner">
+  <br>
+  <h1> // Personal Voice </h1>
+  <p> <i>Websites and projects that I've worked on throughout the years. 
+    <br> The portfolio combines code from software engineering, data analysis and graphics. <br>
+    All projects are custom built including this website. Hope you'll enjoy browsing!
+  </i></p>
+    <section class="tiles">
+      <article class="style2">
+        <span class="image">
+          <img src="images/dance.png" alt="" />
+        </span>
+        <a href="http://pac-schedule.herokuapp.com/" target = "_blank">
+          <h2 style="padding-right:1em">Dance</h2>
+          <div class="content">
+            <p>Website | Frontend engineering.</p>
+          </div>
+        </a>
+      </article>
+      <article class="style2">
+        <span class="image">
+          <img src="images/representable.png" alt="" />
+        </span>
+        <a href="https://representable.org/" target = "_blank">
+          <h2 style="padding-right:1em">Representable</h2>
+          <div class="content">
+            <p>Full stack engineering (Django + PostgresSQL).
+              Funded by Schmidt Futures, we're building mapping software to end gerrymandering.
+            </p>
+          </div>
+        </a>
+      </article>
+    </section>
+  </div>
 
-<div id="first-group" class="group">
-<!-- very unclear why adding a chart here is needed, but it is -->
-<div style="display:none">
-<iframe title="Coffee" aria-label="chart" id="datawrapper-chart-dZyKK" src="https://datawrapper.dwcdn.net/dZyKK/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="560"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
-</script>
-</div>
-
-<div class="blue">
-<h1 class="chart-section-title" id="geography">Geography</h1>
-
-<div class="chart">
-<iframe title="International Students" aria-label="chart" id="datawrapper-chart-WW0hj" src="https://datawrapper.dwcdn.net/WW0hj/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="491"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
-</script>
-</div>
-
-<div class="chart">
-<iframe title="Home Countries" aria-label="Map" id="datawrapper-chart-xhN2I" src="https://datawrapper.dwcdn.net/xhN2I/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="413"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
-</script>
-</div>
-
-</div>
-
-</div>
-
-<div class="intro" style="text-align: center">
-    <p>Continue to <a href="code.html">Code</a>.</p>
-</div>
-
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-      AOS.init();
-
-      // You can also pass an optional settings object
-      // below listed default settings
-      AOS.init({
-        // Global settings:
-        disable: false, // accepts following values: 'phone', 'tablet', 'mobile', boolean, expression or function
-        startEvent: 'DOMContentLoaded', // name of the event dispatched on the document, that AOS should initialize on
-        initClassName: 'aos-init', // class applied after initialization
-        animatedClassName: 'aos-animate', // class applied on animation
-        useClassNames: false, // if true, will add content of `data-aos` as classes on scroll
-        disableMutationObserver: false, // disables automatic mutations' detections (advanced)
-        debounceDelay: 50, // the delay on debounce used while resizing window (advanced)
-        throttleDelay: 99, // the delay on throttle used while scrolling the page (advanced)
-        
-
-        // Settings that can be overridden on per-element basis, by `data-aos-*` attributes:
-        offset: 300, // offset (in px) from the original trigger point
-        delay: 0, // values from 0 to 3000, with step 50ms
-        duration: 600, // values from 0 to 3000, with step 50ms
-        easing: 'ease', // default easing for AOS animations
-        once: false, // whether animation should happen only once - while scrolling down
-        mirror: false, // whether elements should animate out while scrolling past them
-        anchorPlacement: 'top-bottom', // defines which position of the element regarding to window should trigger the animation
-
-      });
-    </script>
-
-    <script>
-$(document).ready(function(){
-  // Add smooth scrolling to all links
-  $("a").on('click', function(event) {
-
-    // Make sure this.hash has a value before overriding default behavior
-    if (this.hash !== "") {
-      // Prevent default anchor click behavior
-      event.preventDefault();
-
-      // Store hash
-      var hash = this.hash;
-
-      // Using jQuery's animate() method to add smooth page scroll
-      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-      $('html, body').animate({
-        scrollTop: $(hash).offset().top
-      }, 800, function(){
-   
-        // Add hash (#) to URL when done scrolling (default click behavior)
-        window.location.hash = hash;
-      });
-    } // End if
-  });
-});
-</script>
-
-<script>
-window.onscroll = function() {myFunction()};
-
-var navbar = document.getElementById("navbar");
-var sticky = navbar.offsetTop;
-
-function myFunction() {
-  if ($(window).width() > 600) {
-  if (window.pageYOffset >= sticky) {
-    navbar.classList.add("sticky")
-  } else {
-    navbar.classList.remove("sticky");
-  }
-  }
-}
-</script>
-
+  <div class="intro" style="text-align: center">
+      <br>
+      <br>
+      <p>Continue browsing the portfolio <a href="code.html">Code</a>.</p>
+  </div>
+  
   </body>
 </html>
