--- a/clips.html
+++ b/clips.html
@@ -113,7 +113,7 @@
 <div class="inner">
   <br>
   <h1> // News </h1>
-  <p> <i> 
+  <p> <i> Delivering fast and dependable reporting to keep our community safe and informed.
   </i></p>
     <section class="tiles">
       <article class="style2">
@@ -148,7 +148,7 @@
   <br>
   <h1> // Audio </h1>
   <p> <i> All audio pieces were personally reported, edited, and scored. <br> 
-    I produce audio in Hindenburg, the software used by NPR news.
+    I produce audio in Hindenburg, the software used by NPR.
   </i></p>
     <section class="tiles">
       <article class="style2">
