--- a/clips.html
+++ b/clips.html
@@ -33,7 +33,7 @@
   <div class="inner">
     <br>
     <h1> // Investigative </h1>
-    <p> <i> Working with the Bellingcat technology team, I am combining open source techniques and data <br> analysis for investigations on misformation, QAnon conspiracy theories, and technology. <br> I also have a special interest in refugee and asylum law and the MENA region.
+    <p> <i> Working to combine open source techniques and data analysis for investigations <br> on misformation, QAnon conspiracy theories, and emerging technologies. <br> I also have a special interest in refugee and asylum law and the MENA region.
     </i></p>
       <section class="tiles">
         <article class="style2">
@@ -113,7 +113,7 @@
 <div class="inner">
   <br>
   <h1> // News </h1>
-  <p> <i> Delivering fast and dependable reporting to keep our community safe and informed.
+  <p> <i> Fast and dependable news reporting to keep our community safe and informed.
   </i></p>
     <section class="tiles">
       <article class="style2">
