--- a/code.html
+++ b/code.html
@@ -12,34 +12,37 @@
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   </head>
 
-<script src="script.js"></script>
+<body>
+  <script src="script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <div id="navbar" class="topnav">
-        <p class="name-logo"><a class="logo-link" href="index.html" style="font-family: minion-pro; font-size: 24px; margin-top: 0px; padding-top: 0px">Edward Tian <span class="short-title" style="font-family: sofia-pro; font-weight: 600"> | Portfolio </span></a></p>
+  <!-- Navbar -->
+  <div id="navbar" class="topnav">
+    <p class="name-logo"><a class="logo-link" href="index.html" style="font-family: minion-pro; font-size: 24px; margin-top: 0px; padding-top: 0px">Edward Tian <span class="short-title" style="font-family: sofia-pro; font-weight: 600"> | Portfolio </span></a></p>
     <div class="topnav-right">
       <p class= "name-logo">
       <a href="code.html" style="font-family: minion-pro; font-size: 22px; margin-top: 0px; padding-top: 0px">Code</a>  
       <a href="clips.html" class = "logo-link" style="font-family: minion-pro; font-size: 22px; margin-top: 0px; padding-top: 0px; margin-right:1em">Clips</a>
       </p>
     </div>
-    </div>
+  </div>
 
-<body>
 <!-- <h2 id="subtitle"> Code with Impact</h2> -->
-<div class="intro">
-<br>
+  <div class="intro">
+  <br>
+  <h1> // Code </h1>
+  <p> <i>Websites and code that I've worked on throughout the years. 
+    <br> The portfolio combines projects from software engineering, data analysis and graphics. <br>
+    All projects are custom built including this website. Hope you'll enjoy browsing!
+    </i>
+    <br>
+    <br>
+    <br>
+  </p>
+  </div>
 
-<h1> // Code </h1>
-<p> <i>Websites and code that I've worked on throughout the years. 
-  <br> The portfolio combines projects from software engineering, data analysis and graphics. <br>
-  All projects are custom built including this website. Hope you'll enjoy browsing!
-  </i>
-  <br>
-  <br>
-  <br>
-</p>
-</div>
-<div class="outer">
+  <div class="outer">
+    
 <div class="inner">
   <section class="tiles">
     <article class="style1">
@@ -114,40 +117,7 @@
         </div>
       </a>
     </article>
-    
-    <!-- <article class="style4">
-      <span class="image">
-        <img src="images/pic04.jpg" alt="" />
-      </span>
-      <a href="generic.html">
-        <h2 style="padding-right:1em">ML Hack</h2>
-        <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-        </div>
-      </a>
-    </article>
-    <article class="style5">
-      <span class="image">
-        <img src="images/pic05.jpg" alt="" />
-      </span>
-      <a href="generic.html">
-        <h2 style="padding-right:1em">Graphs</h2>
-        <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-        </div>
-      </a>
-    </article>
-    <article class="style6">
-      <span class="image">
-        <img src="images/pic06.jpg" alt="" />
-      </span>
-      <a href="generic.html">
-        <h2 style="padding-right:1em">Maps</h2>
-        <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-        </div>
-      </a>
-    </article> -->
+  
     <article class="style2">
       <span class="image">
         <img src="images/talk.png" alt="" />
@@ -186,12 +156,12 @@
     </article>
   </section>
 </div>
-</div>
-</div>
 
-<div class="intro" style="text-align: center">
-    <p>Continue browsing the portfolio <a href="code.html">Clips</a>.</p>
-</div>
+  </div>
 
-  </body>
+  <div class="intro" style="text-align: center">
+      <p>Continue browsing the portfolio <a href="code.html">Clips</a>.</p>
+  </div>
+
+</body>
 </html>
