--- a/clips.html
+++ b/clips.html
@@ -32,7 +32,7 @@
   
   <div class="inner">
     <br>
-    <h1> // Investigative </h1>
+    <h1>Investigative </h1>
     <p> <i> Working to combine open source techniques and data analysis for investigations <br> on misformation, QAnon conspiracy theories, and emerging technologies. <br> I also have a special interest in refugee and asylum law and the MENA region.
     </i></p>
       <section class="tiles">
@@ -66,7 +66,7 @@
   
 <div class="inner">
   <br>
-  <h1> // Features </h1>
+  <h1>Features </h1>
   <p> Longform features pieces averaging ~2000 words each. <br> 
    </p>
     <section class="tiles">
@@ -112,7 +112,7 @@
   
 <div class="inner">
   <br>
-  <h1> // News </h1>
+  <h1>News </h1>
   <p> <i> Fast and dependable news reporting to keep our community safe and informed.
   </i></p>
     <section class="tiles">
@@ -146,7 +146,7 @@
   
 <div class="inner">
   <br>
-  <h1> // Audio </h1>
+  <h1>Audio </h1>
   <p> <i> All audio pieces were personally reported, edited, and scored. <br> 
     I produce audio in Hindenburg, the software used by NPR.
   </i></p>
@@ -193,7 +193,7 @@
   
 <div class="inner">
   <br>
-  <h1> // Personal Voice </h1>
+  <h1>Personal Voice </h1>
   <p> <i>
       The first two pieces are from my creative non-fiction class with Professor John McPhee. <br> The third is an opinion piece for Canadian news.
   </i></p>
