--- a/index.html
+++ b/index.html
@@ -117,15 +117,14 @@
       In this portfolio, I've included both my personal projects and writings.
       Hope you will enjoy!
     </p> -->
-    <br>
-    <img src="images/mike.jpg"> 
+    <!-- <img src="images/mike.jpg">  -->
     </div>
     </div>
     
     <div class = "center-box" data-aos="fade-up">
       <p>
-      Welcome to my portfolio website. I'm a CS and Journalism student constantly looking for new ways to convey
-      information through technology. I've included here some of my favorite clips both in writing and in code.
+      Welcome to my portfolio website. I'm constantly looking for new ways to combine
+      technology and journalism. I've included here some of my favorite clips both in writing and in code.
       </p>
     </div>
     <div class="intro">
