updates to index and clips

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 
 <div style="height: 60vh"></div>
 <div class="large-caption" data-aos="fade-out" data-aos-duration="1200" style="opacity: 0.85">
-  <h3> But my real passion is using words and code to tell stories. </h3> 
+  <h3> With a passion for combining words and code <br> 
+    to tell meaningful stories </h3> 
 </div>
 
 <div style="height: 60vh"></div>
@@ -124,7 +125,21 @@
     <div class = "center-box" data-aos="fade-up">
       <p>
       Welcome to my portfolio website. I'm constantly looking for new ways to combine
-      technology and journalism. I've included here some of my favorite clips both in writing and in code.
+      technology and journalism. I've included here some of my favorite clips both in <a href="clips.html">writing</a> and in <a href="code.html">code</a>.
+      </p>
+    </div>
+
+    <div class = "center-box" data-aos="fade-up">
+      <p>Not sure whether to start with browsing code or clips? You can check out both in this <a href="https://towardsdatascience.com/how-to-tell-stories-with-sentiment-analysis-f94cf9f8ca71" target = "_blank">Towards Data Science</a>
+        article on applying sentiment analysis in journalism! </p>
+    </div>
+    <!-- <div data-aos="fade-up">
+      <img src="images/qmap.png" width="400" height="300">
+    </div> -->
+
+    <div class = "center-box" data-aos="fade-up">
+      <p>
+      If you like this portfolio and want to read more awesome ideas, I also started writing a tech blog! (it was my new years resolution :) You can check it out on substack at <a href="https://brackets.substack.com" target = "_blank">Brackets</a>
       </p>
     </div>
     <div class="intro">
