--- a/clips.html
+++ b/clips.html
@@ -58,7 +58,7 @@
             </div>
           </a>
         </article>
-        <article class="style2">
+<!--         <-- <article class="style2">
           <span class="image">
             <img src="images/twitter.png" alt="" />
           </span>
@@ -69,7 +69,7 @@
               </p>
             </div>
           </a>
-        </article>
+        </article> -->
       </section>
     </div>
 
